--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "stridekit"
-version = "1.0.0"
+version = "1.0.1"
 description = "An Agent-First Framework for Sprint-Powered, Spec-Driven Development"
 readme = "README.md"
 requires-python = ">=3.8"
@@ -42,6 +42,11 @@ dev = [
     "black>=23.0.0",
     "isort>=5.12.0",
     "mypy>=1.0.0",
+]
+docs = [
+    "mkdocs>=1.5.0",
+    "mkdocs-material>=9.5.0",
+    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
 ]
 
 [project.scripts]
