--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,8 @@ dependencies = [
     "pydantic>=2.0.0",
     "pyfiglet>=0.8.post1",
     "questionary>=2.0.0",
+    "supabase>=2.0.0",
+    "keyring>=24.0.0",
 ]
 
 [project.optional-dependencies]
