--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ pyyaml>=6.0.0
 pydantic>=2.0.0
 pyfiglet>=0.8.post1
 questionary>=2.0.0
+supabase>=2.0.0
+keyring>=24.0.0
 
 # Development dependencies
 pytest>=7.0.0
